project-template/monitoring/virtualservice-grafana.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  gateways:
    - istio-ingress/gateway-external
  hosts:
    - grafana.example.com
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 80
